Correccion ControladorRest return singleton